tests/parser/parse-for.1.bad.error
error: Malformed for expression
  --> test:4:15
   |
 4 |  (define f (for))
   |                ^ expected pattern
